# crewai_teste_deploy_cli

./: README.md
api_extract/: .env  .example_env  create_table.sql  pyproject.toml
api_extract/src/: get_bitcoin_db.py  select.py
relatorio_pesquisa/: README.md  pyproject.toml
relatorio_pesquisa/src/relatorio_pesquisa/: crew.py  main.py
relatorio_pesquisa/src/relatorio_pesquisa/config/: agents.yaml  tasks.yaml
relatorio_pesquisa/src/relatorio_pesquisa/output/: report.md
